# Antigravity-Manager

./: README.md  package.json
src-tauri/: Cargo.toml
src-tauri/src/proxy/: rate_limit.rs  token_manager.rs
src-tauri/src/proxy/handlers/: claude.rs  openai.rs
src-tauri/src/proxy/mappers/claude/: request.rs
src-tauri/src/proxy/mappers/gemini/: wrapper.rs
src-tauri/src/proxy/mappers/openai/: request.rs  streaming.rs
src/components/accounts/: AddAccountDialog.tsx
src/components/common/: GroupedSelect.tsx
src/locales/: en.json  zh.json
src/pages/: ApiProxy.tsx
