[package]
name = "antigravity_tools"
version = "3.3.18"
description = "A Tauri App"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antigravity_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
image = "0.25.9"
thiserror = "2.0.17"

# 反代服务依赖
axum = { version = "0.7", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"                        # 生成 sessionId 和 mock project_id
async-stream = "0.3.6"              # 简化异步流生成
regex = "1.12.2"                    # Duration 解析
once_cell = "1.19"                  # 静态初始化 (模型映射表)
pin-project = "1.1"                 # Pin 投影辅助
bytes = "1.5"                       # SSE 字节操作
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tauri-plugin-autostart = "2.5.1"
sha2 = "0.10"
